[package]

name = "block-alloc-appendbuf"
version = "0.1.6"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>", "Rick Richardson <rick.richardson@gmail.com>"]
repository = "https://github.com/reem/rust-appendbuf.git"
description = "A Sync append-only buffer with Send views, tweaked to alloc-from, and free to `block_alloc`"
readme = "README.md"
license = "MIT"

[dependencies]
memalloc = "0.1"
block_allocator = "~0.2"
bytes = {git = "https://github.com/rrichardson/bytes"} 
